--- a/rexd.css
+++ b/rexd.css
@@ -29,3 +29,13 @@ nav ul li a {
 nav ul li a:hover {
   color: #f39c12; /* Зміна кольору при наведенні */
 }
+body {
+  background-image: url('assets/images/bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; /* Встановлюємо мінімальну висоту на весь екран */
+}
