--- a/assets/images/СSS/Roli.css
+++ b/assets/images/СSS/Roli.css
@@ -1,1 +1,53 @@
+.menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+}
+
+.menu li {
+  position: relative;
+  margin: 0 15px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  padding: 10px;
+  display: block;
+}
+
+.menu li a:hover {
+  color: #f39c12;
+}
+
+/* Випадаюче меню */
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 0;
+  min-width: 200px;
+  z-index: 999;
+}
+
+.dropdown-menu li {
+  margin: 0;
+}
+
+.dropdown-menu li a {
+  padding: 10px;
+  color: white;
+  border-bottom: 1px solid #444;
+}
+
+/* Показати меню при наведенні */
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
 
